<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="realm.tcc.desenvolvimento.aplicacoes.dispositivos.moveis.tccrealm.activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblQuantidadeLivros"
            android:layout_weight="0"/>
        <EditText
            android:id="@+id/edtQuantidadeRegistroLivros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblQuantidadeCapitulos"
            android:layout_weight="0"/>
        <EditText
            android:id="@+id/edtQuantidadeRegistroCapitulos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnInserts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblInserts" />
    <TextView
        android:id="@+id/lblTempoInserts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDeleteAll"/>
    <TextView
        android:id="@+id/lblTempoDeleteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/btnContadorRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblContadorRegistro"/>
    <TextView
        android:id="@+id/lblRegistroCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/btnSelectLivros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblSelectLivros"/>
    <TextView
        android:id="@+id/lblTempoSelectsLivros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/btnSelectCapitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblSelectCapitulos"/>
    <TextView
        android:id="@+id/lblTempoSelectsCapitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
</LinearLayout>
